# fetch-api-json-rust

./: Cargo.toml  README.md
src/: main.rs
