[package]
name = "fetch-api-json-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# http client to allow us to fetch json from API
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }